New step of the blog project

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
     <!-- Pied de page -->
     <footer>
-      <div>&copy; 2024 Mon Site Web</div>
+      <div>&copy; 2024 HeleneB's Blog created with Pyton and Django</div>
     </footer>
   </body>
 </html>
