--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,35 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} {% block content %} {% load static %}
 
-<!-- <div class="header">{% block title %}HeleneB's Blog{% endblock %}</div> -->
+<!-- <div class="header">{% block title %}HeleneB's Blog{% endblock %} </div> -->
+<div class="new-post">
+  <a href="{% url 'create' %}" class="btn">Create a new post</a>
+</div>
 <div class="row">
+  <img
+    src="{% static 'assets/avatar.jpg' %}"
+    alt="avatar"
+    class="avatar-image"
+  />
   <div class="leftcolumn">
     {% for post in posts reversed %}
     <div class="card">
-      <a style="text-decoration: none; color: black" href="/post/{{ post.id }}">
+      <a
+        href="{% url 'post' post.id %}"
+        style="text-decoration: none; color: black"
+      >
         <h2>{{ post.title }}</h2>
         <h5>{{ post.created_at }}</h5>
         <p>{{ post.content|truncatewords:20 }}</p>
       </a>
+      <div class="button-group">
+        <a href="{% url 'update_post' pk=post.id %}" class="btn-edit">Edit</a>
+        <a href="{% url 'delete_post' pk=post.id %}" class="btn-delete"
+          >Delete</a
+        >
+      </div>
     </div>
     {% endfor %}
   </div>
 </div>
+
 {% endblock %}
