--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,34 @@
-{% extends 'base.html' %} {% block content %} {% load static %}
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-<!-- <div class="header">{% block title %}HeleneB's Blog{% endblock %} </div> -->
+<a href="{% url 'logout' %}">Se déconnecter</a>
+
+{% if messages %}
+{% for message in messages %}
+<div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %} " style="color: white;">
+  {{ message }}
+</div>
+{% endfor %}
+{% endif %}
+
 <div class="new-post">
   <a href="{% url 'create' %}" class="btn">Create a new post</a>
 </div>
+
 <div class="row">
-  <img
-    src="{% static 'assets/avatar.jpg' %}"
-    alt="avatar"
-    class="avatar-image"
-  />
+  <img src="{% static 'assets/avatar.jpg' %}" alt="avatar" class="avatar-image" />
   <div class="leftcolumn">
     {% for post in posts reversed %}
     <div class="card">
-      <a
-        href="{% url 'post' post.id %}"
-        style="text-decoration: none; color: black"
-      >
+      <a href="{% url 'post' post.id %}" style="text-decoration: none; color: black">
         <h2>{{ post.title }}</h2>
         <h5>{{ post.created_at }}</h5>
         <p>{{ post.content|truncatewords:20 }}</p>
       </a>
       <div class="button-group">
         <a href="{% url 'update_post' pk=post.id %}" class="btn-edit">Edit</a>
-        <a href="{% url 'delete_post' pk=post.id %}" class="btn-delete"
-          >Delete</a
-        >
+        <a href="{% url 'delete_post' pk=post.id %}" class="btn-delete">Delete</a>
       </div>
     </div>
     {% endfor %}
