--- a/templates/base.html
+++ b/templates/base.html
@@ -17,16 +17,48 @@
     <h2><a href="/index">HeleneB's Blog</a></h2>
   </div>
 
+  <div class="sidebar">
+    <h2>HeleneB's Blog</h2>
+    {% if user.is_authenticated %}
+    <p>Salut, {{ user }} !</p>
+
+    {% if user.profile_picture %}
+    <img class="profile_picture" src="{{ user.profile_picture.url }}" alt="Profile Picture">
+    {% else %}
+    <img class="profile_picture" src="{% static 'assets/default_profile.png' %}" alt="Default Profile Picture">
+    {% endif %}
+    <form method="get" action="{% url 'search' %}" style="display: flex; align-items: center;">
+      <input type="text" name="q" placeholder="Rechercher un post" aria-label="Search"
+        style="padding: 5px; margin-right: 5px;">
+      <button type="submit" style="padding: 5px;">🔍</button>
+    </form>
+    <p><a href="{% url 'index' %}">Accueil</a></p>
+    {% if perms.posts.add_post %}
+    <p><a href="{% url 'photo_upload' %}">Téléverser une photo</a></p>
+    <p><a href="{%url 'create'%}"> Créer un post</a></p>
+    {% endif %}
+    <p><a href="{% url 'follow_users' %}">Suivre des utilisateurs</a></p>
+    <p><a href="{% url 'password_change' %}">Changer le mot de passe</a></p>
+    <p><a href="{%url 'update_profile' %}">Modifier mon compte</a></p>
+    <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
+    {% else %}
+    <p>Bienvenue, invité !<br> Veuillez vous connecter.</p>
+    <p><a href="{% url 'login' %}">Se connecter</a></p>
+    <p><a href="{% url 'signup' %}">S'inscrire</a></p>
+    {% endif %}
+  </div>
+
   <!-- Contenu principal -->
   <div class="content">
     {% block content %}
+
     <!-- Contenu spécifique à chaque page -->
     {% endblock %}
   </div>
 
   <!-- Pied de page -->
   <footer>
-    <div>&copy; 2024 HeleneB's Blog created with Pyton and Django</div>
+    <div>&copy; 2024 HeleneB's Blog created with Python and Django</div>
   </footer>
 </body>
 
