--- a/templates/create.html
+++ b/templates/create.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+
+{% block content %}
 <div style="color: aliceblue; text-align: center; margin-bottom: 20px">
   <h1>Ajouter un post...</h1>
 </div>
@@ -6,23 +8,29 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Create a new post</h2>
-      <form method="POST">
+      <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
+
+        <!-- Champ pour le titre -->
         <div class="input-group">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" required />
         </div>
+
+        <!-- Champ pour le contenu -->
         <div class="input-group">
           <label for="content">Content</label>
-          <textarea
-            rows="10"
-            cols="100"
-            name="content"
-            id="content"
-            required
-          ></textarea>
+          <textarea rows="10" cols="100" name="content" id="content" required></textarea>
         </div>
-        <button type="submit" class="btn">Create</button>
+
+        <!-- Champ pour télécharger la photo -->
+        <div class="input-group">
+          <label for="photo">Upload a photo</label>
+          <input type="file" name="photo" id="photo" accept="image/*" />
+        </div>
+
+        <!-- Bouton pour soumettre le formulaire -->
+        <button type="submit" class="btn btn-primary">Create</button>
       </form>
     </div>
   </div>
