--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div style="background-color: aliceblue;">
-
-  <h1>Se connecter</h1>
-
-  {% if not user.is_authenticated %}
-  <p> {{ message }}</p>
-  {% endif %}
+<div class="card">
   <form method="post">
-    {{ form.as_p }} {% csrf_token %}
+    {{ form.as_p }}
+    {% csrf_token %}
     <button type="submit">Se connecter</button>
   </form>
+  <p>Pas encore membre ? <a href="{% url 'signup' %}">Inscrivez-vous maintenant !</a></p>
 </div>
 {% endblock content %}
