--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
     <p>Bienvenue sur ce blog,<br> un espace d'exploration et de partage d'idées,<br> où chaque pas compte pour avancer.
     </p>
     <p>Ce blog est dédié à mon parcours d'apprentissage en Python et Django. Ici, je partage des astuces, des projets,
-      et des leçons tirées de mes expériences, un peu comme un journal de bord technique. Si toi aussi tu es
-      passionné(e) par le développement web et curieux d'en apprendre plus sur ces technologies, j'espère que tu
-      trouveras ici des ressources utiles et inspirantes !</p>
+      et des leçons tirées de mes expériences, un peu comme un journal de bord technique. <span class="no"> Si
+        toi aussi tu es
+        passionné(e) par le développement web et curieux d'en apprendre plus sur ces technologies, j'espère que tu
+        trouveras ici des ressources utiles et inspirantes !</span></p>
   </div>
 </div>
 
@@ -41,20 +42,27 @@
     </div>
     {% endfor %}
   </div>
+  <div class="pagination">
+    <span>
+      {% if page_obj.has_previous %}
 
-  <span>
-    {% if page_obj.has_previous %}
-    <a href="?page=1">« première</a>
-    <a href="?page={{ page_obj.previous_page_number }}">précédente</a>
-    {% endif %}
+      <a href="?page=1">« première</a>
+      <a href="?page={{ page_obj.previous_page_number }}">précédente</a>
+      {% endif %}
 
-    <span>Page {{ page_obj.number }} sur {{ page_obj.paginator.num_pages }}.</span>
+      <span class="pagination-info">
+        Page <span class="num_pages">{{ page_obj.number }}</span> sur
+        <span class="num_pages">{{ page_obj.paginator.num_pages }}</span>.
+      </span>
 
-    {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}">suivante</a>
-    <a href="?page={{ page_obj.paginator.num_pages }}">dernière »</a>
-    {% endif %}
-  </span>
+
+      {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}">suivante</a>
+      <a href="?page={{ page_obj.paginator.num_pages }}">dernière »</a>
+      {% endif %}
+
+    </span>
+  </div>
 </div>
 
 {% endblock %}
