--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,9 @@
     <h2>HeleneB's Blog</h2>
     <p>Bienvenue sur ce blog,<br> un espace d'exploration et de partage d'idées,<br> où chaque pas compte pour avancer.
     </p>
-    <p>Ce blog est dédié à mon parcours d'apprentissage en Python et Django. Ici, je partage des astuces, des projets,
-      et des leçons tirées de mes expériences, un peu comme un journal de bord technique. <span class="no"> Si
+    <p><span class="no">Ce blog est dédié à mon parcours d'apprentissage en Python et Django. Ici, je partage des
+        astuces, des projets,
+        et des leçons tirées de mes expériences, un peu comme un journal de bord technique. Si
         toi aussi tu es
         passionné(e) par le développement web et curieux d'en apprendre plus sur ces technologies, j'espère que tu
         trouveras ici des ressources utiles et inspirantes !</span></p>
