--- a/templates/create.html
+++ b/templates/create.html
@@ -6,7 +6,7 @@
 </div>
 <div class="row">
   <div class="leftcolumn">
-    <div class="container">
+    <div class="card">
       <h2>Create a new post</h2>
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
