--- a/templates/password_change.html
+++ b/templates/password_change.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <h2>Changer de mot de passe</h2>
-<div class="container">
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn-edit" type="submit">Confirmer</button>
-    </form>
-</div>
+
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Confirmer</button>
+</form>
+
 {% endblock content %}
