--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>{% block title %}Mon Site{% endblock %}</title>
+  <title>{% block title %}HeleneB's Blog{% endblock %}</title>
+  <link rel="icon" href="{% static 'assets/favicon.ico' %}" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
   {% block head %}{% endblock %}
   <!-- Garder un bloc pour des scripts ou styles supplémentaires si nécessaire -->
