--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
       <a href="{% url 'post' post.id %}" style="text-decoration: none; color: black">
         <h2>{{ post.title }}</h2>
         <p>{{ post.content|truncatewords:20 }}</p>
-        <p>Posté par : {% get_post_display user=user %}</p>
+        <p>Posté par : {% get_post_display user=post.creator %}</p>
         <p>{{ post.created_at|get_posted_at_display }}</p>
       </a>
       <div class="button-group">
