--- a/posts/templates/posts/update_post.html
+++ b/posts/templates/posts/update_post.html
@@ -1,25 +1,60 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
+{% load posts_extras %}
+{% block content %}
+
 <div class="container">
-  <h2>Post content</h2>
-  <form method="POST">
+  <h2>Update Post content</h2>
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+
     <button class="btn" type="submit">Update</button>
+    <p>Posté par : {% get_post_display user=post.creator %}</p>
+    <p> {{ post.created_at|get_posted_at_display }}</p>
+    <!-- Champ pour télécharger la photo -->
+    <!-- Afficher l'image actuelle (si disponible) -->
+    {% if post.photos %}
+    <img src="{{ post.photos.image.url }}" alt="Current Photo" width="100">
+    <p>Current caption: {{ post.photos.caption }}</p>
+    {% endif %}
+
+    <!-- Champ pour changer la photo -->
+    <label for="photo">Change Photo</label>
+    <input type="file" id="photo" name="photo">
+
+    <!-- Champ pour la légende de la photo -->
+    <label for="caption">Caption</label>
+    <input type="text" id="caption" name="caption" value="{{ post.photos.caption }}">
+
     <div class="input-group">
       <label for="title">Title</label>
-      <input
-        type="text"
-        name="title"
-        id="title"
-        required
-        value="{{ post.title }}"
-      />
+      <input type="text" name="title" id="title" required value="{{ post.title }}" />
     </div>
+
     <div class="input-group">
       <label for="content">Content</label>
-      <textarea rows="50" cols="100" name="content" id="content" required>
-{{ post.content }}</textarea
-      >
+      <textarea rows="50" cols="100" name="content" id="content" required>{{ post.content }}</textarea>
     </div>
   </form>
 </div>
+<!-- Prévisualisation de l'image -->
+<script>
+  document.getElementById("photo").addEventListener("change", function (event) {
+    const [file] = this.files;
+    if (file) {
+      const preview = document.createElement("img");
+      preview.src = URL.createObjectURL(file);
+      preview.style.maxWidth = "300px";
+      preview.style.marginTop = "10px";
+      const container = this.parentNode;
+      const existingPreview = container.querySelector("img");
+      if (existingPreview) container.removeChild(existingPreview);
+      container.appendChild(preview);
+    }
+  });
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    var simplemde = new SimpleMDE({ element: document.getElementById("content") });
+  });
+</script>
 {% endblock %}
