Dotenv, UserSession, and some other changes

--- a/posts/templates/posts/post.html
+++ b/posts/templates/posts/post.html
@@ -25,7 +25,7 @@
 
             <div id="content">
                 <!-- Affiche le contenu Markdown transformé en HTML -->
-                {{ content_convert|safe }}
+                {{ convert_content|safe }}
             </div>
         </div>
     </div>
